@@ -31,6 +31,9 @@ val extract_struct_tree : Pdf.t -> Cpdfyojson.Safe.t
 (** Reapply an edited JSON structure tree to its PDF. *)
 val replace_struct_tree : Pdf.t -> Cpdfyojson.Safe.t -> unit
 
+(** Remove a structure tree entirely from a file, including unmarking marked content. *)
+val remove_struct_tree : Pdf.t -> unit
+
 (** Make a blank PDF/UA-1 PDF given a title, paper size, and number of pages. *)
 val create_pdfua1 : string -> Pdfpaper.t -> int -> Pdf.t
 
